Adicionando ponto de entrada ao recurso de fazer cópia dos volumes para hd externo

--- a/django/backup_corporativo/templates/bkp/offsite/mounterror.html
+++ b/django/backup_corporativo/templates/bkp/offsite/mounterror.html
@@ -12,6 +12,6 @@
 
 </div>
 
-<a href="/offsite/select_storage" > <button type="button"> <span>Voltar</span> </button> </a>
+<a href="/system/backup/" > <button type="button"> <span>Voltar</span> </button> </a>
 
 {% endblock %}
