--- a/django/backup_corporativo/templates/bkp/offsite/select_storage.html
+++ b/django/backup_corporativo/templates/bkp/offsite/select_storage.html
@@ -1,4 +1,9 @@
 {% extends "bkp/base.html" %}
+
+{% block horizontal_menu %}
+	{% include 'bkp/system/menu_system.html' %}
+{% endblock %}
+
 {% block content %}
 
 <h1> Por favor, selecione o destino onde deseja realizar a cópia de segurança </h1>
