--- a/nimbus/base/templates/home.html
+++ b/nimbus/base/templates/home.html
@@ -157,6 +157,7 @@
 	
 	
 
+        {% if 0 %}
 
 
 	
@@ -574,5 +575,7 @@
 		
     	</div>		<!-- .block ends -->
 
+
+        {% endif %}
 
 {% endblock %}
