--- a/nimbus/computers/templates/computers_view.html
+++ b/nimbus/computers/templates/computers_view.html
@@ -23,34 +23,28 @@
 	</div>		<!-- .block_head ends -->
 
     <div class="block_content">
-        <p><a href="/computers/add">Adicionar computador</a></p>
+        <p><a href="/computers/add">Adicionar computador</a> • <a href="/computers/">Visualizar todos os computadores</a></p>
         <div class="computers">
-        {% for comp in computers %}
             <div class="computer" style="padding: 20px; -moz-border-radius: 5px; background: #EEE; margin-bottom: 20px">
                 <div class="left" style="float: left; width: 250px">
                     <div class="title">
                         <img src="/media/icons/computer.png" style="float: left; height: 32px; padding-right: 10px" />
-                        <h3 class="name" style="margin: 0 0 -5px 0; padding: 0">{{comp.name}}</h3>
-                        <small class="ip">{{comp.address}} - {{comp.operation_system|title}} - {% for g in comp.groups.all %}{{g.name}}{% endfor %}</small>
+                        <h3 class="name" style="margin: 0 0 -5px 0; padding: 0">{{computer.name}}</h3>
+                        <small class="ip">{{computer.address}} - {{computer.operation_system|title}} - {% for g in computer.groups.all %}{{g.name}}{% endfor %}</small>
                     </div>
-                    <p style="font-size: 10px; margin-top: 10px; line-height: 1.4em">{{comp.description}}</p>
-                    <p style="font-size: 10px; margin: 0px; padding: 0; line-height: 1.4em"><a href="/computers/{{comp.id}}/edit/">Editar</a> - <a href="/computers/{{comp.id}}/delete/">Remover</a></p>
+                    <p style="font-size: 10px; margin-top: 10px; line-height: 1.4em">{{computer.description}}</p>
+                    <p style="font-size: 10px; margin: 0px; padding: 0; line-height: 1.4em"><a href="/computers/{{computer.id}}/edit/">Editar</a> - <a href="/computers/{{computer.id}}/delete/">Remover</a></p>
                 </div>
                 <div class="right" style="float: right; width: 600px">
-                    {% if not comp.procedure_set.count %}
+                    {% if not computer.procedure_set.count %}
                         <div class="message warning">
                             <p>Não há procedimentos neste computador.</p>
                         </div>
                     {% else %}
-                        <h4 style="float: left">ARQUIVOS PARA BACKUP</h4>
-                        <div style="float: right">
-                            <form action="/restore/{{comp.id}}/view/" method="post">
-                            <input type="submit" class="submit small" value="Restaurar" style="float: right; font-size: 11px; margin-right: 0" />
-                            </form>
-                        </div>
-                        <div class="clear"></div>
+                        <h4>ARQUIVOS PARA BACKUP</h4>
+                        
                         <div class="files" style="padding: 10px; -moz-border-radius: 5px; background: #FFF; margin-bottom: 20px; border: 1px solid #CCC">
-                            {% for proc in comp.procedure_set.all %}
+                            {% for proc in computer.procedure_set.all %}
                             <div class="file">
                                 <div class="title">
                                     <a href="#" class="toggle" ref="fileset_detail">
@@ -76,7 +70,6 @@
                 </div>
                 <div class="clear"></div>
             </div>
-        {% endfor %}
         </div>
     
     </div>
