--- a/nimbus/media/lib/css/style.css
+++ b/nimbus/media/lib/css/style.css
@@ -532,7 +532,8 @@ a:hover {
 	
 	
 /* Messages */
-	
+
+.wrapper .message,	
 .block .message {
 	padding: 10px 15px 10px 40px;
 	margin: 10px 0;
@@ -543,36 +544,42 @@ a:hover {
 	border-radius: 3px;
 	}
 
+.wrapper .message p,
 .block .message p {
 	padding: 0;
 	width: 93%;
 	float: left;
 	}
-	
+
+.wrapper .message.errormsg.	
 .block .message.errormsg {
 	border: 1px solid #e9c59b;
 	background: #ffecce url(../images/error.gif) 12px 12px no-repeat;
 	color: #e3302c;
 	}
-	
+
+.wrapper .message.success,	
 .block .message.success {
 	border: 1px solid #bfde84;
 	background: #edfbd8 url(../images/success.gif) 12px 12px no-repeat;
 	color: #508600;
 	}
-		
+
+.wrapper .message.info,		
 .block .message.info {
 	border: 1px solid #bbdbe0;
 	background: #ecf9ff url(../images/info.gif) 12px 12px no-repeat;
 	color: #0888c3;
 	}
-	
+
+.wrapper .message.warning,	
 .block .message.warning {
 	border: 1px solid #e5e181;
 	background: #fefde2 url(../images/warning.gif) 12px 12px no-repeat;
 	color: #666;
 	}
-	
+
+.wrapper .message .close,
 .block .message .close {
 	display: block;
 	float: right;
@@ -584,7 +591,8 @@ a:hover {
 	-moz-opacity: 0.7;
 	opacity: 0.7;
 	}
-	
+
+.wrapper .message .close.hover,	
 .block .message .close.hover {
 	-moz-opacity: 1;
 	opacity: 1;
