Implementando a pagina de backup, ainda nao esta finalizada.

--- a/nimbus/media/lib/css/style.css
+++ b/nimbus/media/lib/css/style.css
@@ -603,7 +603,7 @@ a:hover {
 
 .block form p {
 	overflow: hidden;
-	clear: both;
+	/*clear: both;*/
 	}
 
 .block form label {
@@ -681,6 +681,7 @@ a:hover {
 	-moz-border-radius: 3px;
 	border-radius: 3px;
 	background: url('../images/sdd.jpg') center right no-repeat;
+	float: left;
 	}
 
 .block form .cmf-skinned-select:hover {
@@ -1034,4 +1035,28 @@ a:hover {
     margin: 0 0 0 -20px;
     background: #EEE !important;
     padding: 10px 20px !important;
+}
+
+
+.personal_message {
+    padding: 10px;
+    border: 1px solid #DDD;
+    background: #F4F4F4;
+    -moz-border-radius: 3px;
+    margin: 10px 0;
+}
+
+.personal_message p {
+    margin: 0;
+    padding: 0 0 0 25px;
+    background: url(/media/icons/information.png) left no-repeat;
+}
+
+#schedule.withsidebar .block_content .sidebar .sidemenu li a {
+    background: url(/media/icons/cross_circle.png) no-repeat 10px center;
+    padding-left: 33px;
+}
+
+#schedule.withsidebar .block_content .sidebar .sidemenu li a.active {
+    background: url(/media/icons/tick_circle.png) no-repeat 10px center;
 }
