--- a/nimbus/backup/templates/backup_create.html
+++ b/nimbus/backup/templates/backup_create.html
@@ -23,10 +23,10 @@
 
     <div class="block_content">
         
-        <form action="#" method="post">
+        <form action="/backup/add/" method="post">
             <p>
                 <label>Nome para o procedimento de backup:</label><br/>
-                <input type="text" class="text small" />
+                <input type="text" class="text small" name="procedure_name" />
             </p>
             <p>
                 <label for="computer_id">Computador que será efetuado o backup:</label><br/>
@@ -62,10 +62,10 @@
                 <small>Um perfil de configuração é um conjunto de armazenamento, agendamento e caminhos de diretórios que serão feitos backup.</small>
             </p>
             
-            <div class="novo_perfil" style="display: none; padding: 20px; background: #FFF2A7">
+            <div class="novo_perfil" style="display: none; padding: 20px; background: #FFF2A7; margin-bottom: 20px">
                 <p>
                     <label for="storage_id">Local de armazenamento dos arquivos:</label><br/>
-                    <select class="styled" id="storage_id" name="storage_id">
+                    <select class="styled" id="storage_id" name="profile.storage_id">
                         <option value=""> - Selecione - </option>
                         {% for storage in storages %}
                         <option value="{{storage.id}}">{{storage.name}} - {{storage.address}}</option>
@@ -88,7 +88,7 @@
                 
                 <p>
                     <label for="schedule_id">Agendamento:</label><br/>
-                    <select class="styled" id="schedule_id" name="schedule_id">
+                    <select class="styled" id="schedule_id" name="profile.schedule_id">
                         <option> - Selecione - </option>
                         {% for schedule in schedules %}
                         <option value="{{schedule.id}}">{{schedule.name}}</option>
@@ -113,7 +113,7 @@
     			            $(document).ready(function(){
         			            $('.schedule_activate').change(function(){
         			                _checked = $(this).attr('checked');
-        			                _class = $(this).attr('name');
+        			                _class = $(this).attr('id');
         			                if (_checked) {
             			                $('.' + _class).addClass('active');
         			                } else {
@@ -137,52 +137,52 @@
 			        
             			<div class="sidebar_content" id="mensal">
             			    <p>
-                                <input type="checkbox" name="monthly" class="schedule_activate" id="monthly_activate" value="1" /> <label for="monthly_activate">Ativar</label>
+                                <input type="checkbox" name="schedule.monthly.active" class="schedule_activate" id="monthly" value="1" /> <label for="monthly">Ativar</label>
                             </p>
                             <div class="personal_message"><p>Executa o backup em determinados dias do mês, sempre no horário especificado.</p></div>
                             <p>
                                 <label>Dias do mês:</label><br/>
                                 {% for day in days %}
-                                <input type="checkbox" id="day_{{day}}" name="monthly_schedule" value="{{day}}" />
+                                <input type="checkbox" id="day_{{day}}" name="schedule.monthly.day" value="{{day}}" />
                                 <label for="day_{{day}}">{{day}}º</label>
                                 {% endfor %}
                             </p>
                             <p>
                                 <label for="mothly_hour">Hora:</label><br/>
-                                <input type="text" name="mothly_hour" id="mothly_hour" class="text small" style="width: 45px" /><br/>
+                                <input type="text" name="schedule.monthly.hour" id="mothly_hour" class="text small" style="width: 45px" /><br/>
                                 <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
                             </p>
                             <p>
                                 <label for="level_id">Tipo de backup:</label>
-                                <select class="styled" id="level_id" name="level_id">
+                                <select class="styled" id="level_id" name="schedule.monthly.level">
                                     {% for level in levels %}
                                     <option value="{{level}}">{{level}}</option>
                                     {% endfor %}
-                                </select>
+                                </select><br/>
                                 <small style="line-height: 1.2em">No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
                             </p>
             			</div>		<!-- .sidebar_content ends -->
 			        
             			<div class="sidebar_content" id="semanal">
             			    <p>
-                                <input type="checkbox" name="weekly" class="schedule_activate" id="weekly_activate" value="1" /> <label for="weekly_activate">Ativar</label>
+                                <input type="checkbox" name="schedule.weekly.active" class="schedule_activate" id="weekly" value="1" /> <label for="weekly">Ativar</label>
                             </p>
                             <div class="personal_message"><p>Executa o backup em determinados dias da semana, sempre no horário especificado.</p></div>
                             <p>
                                 <label>Dias da semana:</label><br/>
                                 {% for day in weekdays %}
-                                <input type="checkbox" id="day_{{day}}" name="monthly_schedule" value="{{day}}" />
+                                <input type="checkbox" id="day_{{day}}" name="schedule.weekly.day" value="{{day}}" />
                                 <label for="day_{{day}}">{{day|title}}</label>
                                 {% endfor %}
                             </p>
                             <p>
                                 <label for="mothly_hour">Hora:</label><br/>
-                                <input type="text" name="mothly_hour" id="mothly_hour" class="text small" style="width: 45px" maxlength="5" /><br/>
+                                <input type="text" name="schedule.weekly.hour" id="mothly_hour" class="text small" style="width: 45px" maxlength="5" /><br/>
                                 <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
                             </p>
                             <p>
                                 <label for="level_id">Tipo de backup:</label><br/>
-                                <select class="styled" id="level_id" name="level_id">
+                                <select class="styled" id="level_id" name="schedule.weekly.level">
                                     {% for level in levels %}
                                     <option value="{{level}}">{{level}}</option>
                                     {% endfor %}
@@ -193,17 +193,17 @@
 			        
             			<div class="sidebar_content" id="diario">
             			    <p>
-                                <input type="checkbox" name="dayly" class="schedule_activate" id="dayly_activate" value="1" /> <label for="dayly_activate">Ativar</label><br/>
+                                <input type="checkbox" name="schedule.dayly.active" class="schedule_activate" id="dayly" value="1" /> <label for="dayly">Ativar</label><br/>
                             </p>
                             <div class="personal_message"><p>Executa o backup todos os dias, sempre no horário especificado.</p></div>
                             <p>
                                 <label for="dayly_hour">Hora:</label><br/>
-                                <input type="text" name="dayly_hour" id="dayly_hour" class="text small" style="width: 45px" maxlength="5" /><br/>
+                                <input type="text" name="schedule.dayly.hour" id="dayly_hour" class="text small" style="width: 45px" maxlength="5" /><br/>
                                 <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
                             </p>
                             <p>
                                 <label for="level_id">Tipo de backup:</label>
-                                <select class="styled" id="level_id" name="level_id">
+                                <select class="styled" id="level_id" name="schedule.dayly.level">
                                     {% for level in levels %}
                                     <option value="{{level}}">{{level}}</option>
                                     {% endfor %}
@@ -214,17 +214,17 @@
                     
                         <div class="sidebar_content" id="minuto">
                             <p>
-                                <input type="checkbox" name="hourly" class="schedule_activate" id="hourly_activate" value="1" /> <label for="hourly_activate">Ativar</label>
+                                <input type="checkbox" name="schedule.hourly.active" class="schedule_activate" id="hourly" value="1" /> <label for="hourly">Ativar</label>
                             </p>
                             <div class="personal_message"><p>Executa o backup todas as horas do dia, sempre no minuto especificado.</p></div>
                             <p>
                                 <label for="hourly_hour">Minuto:</label><br/>
-                                <input type="text" name="hourly_hour" id="hourly_hour" class="text small" style="width: 20px" maxlength="2" /><br/>
+                                <input type="text" name="schedule.hourly.minute" id="hourly_hour" class="text small" style="width: 20px" maxlength="2" /><br/>
                                 <small>Exemplo: 20, 35 ou 08.</small>
                             </p>
                             <p>
                                 <label for="level_id">Tipo de backup:</label>
-                                <select class="styled" id="level_id" name="level_id">
+                                <select class="styled" id="level_id" name="schedule.hourly.level">
                                     {% for level in levels %}
                                     <option value="{{level}}">{{level}}</option>
                                     {% endfor %}
@@ -257,7 +257,7 @@
 
                 <p>
                     <label for="fileset_id">Conjunto de arquivos para backup:</label><br/>
-                    <select class="styled" id="fileset_id" name="fileset_id">
+                    <select class="styled" id="fileset_id" name="profile.fileset_id">
                         <option> - Selecione - </option>
                         {% for fileset in filesets %}
                         <option value="{{fileset.id}}">{{fileset.name}}</option>
@@ -270,13 +270,41 @@
     	            $(document).ready(function(){
     	                $('#filepath_template').clone().appendTo('.filepaths').show();
     	                
+    	                function remover_path(obj) {
+    	                    $(obj).parent().remove();
+    	                    if ($('#filepath_template').parent().children().length == 1) {
+    	                        adicionar_path();
+    	                    }
+    	                }
+    	                
+    	                function adicionar_path(obj) {
+    	                    if (obj) {
+    	                        $('#filepath_template').clone().insertAfter($(obj).parent()).show();
+    	                    } else {
+    	                        $('#filepath_template').clone().appendTo('.filepaths').show();
+    	                    }
+    	                    
+    	                    
+    	                    $('.filepaths .add').unbind('click').click(function(){
+        	                    adicionar_path(this);
+        	                });
+        	                
+        	                $('.filepaths .del').unbind('click').click(function(){
+        	                    remover_path(this);
+        	                });
+    	                }
+    	                
     	                $('.filepaths .add').click(function(){
-    	                    $('#filepath_template').clone().appendTo('.filepaths').show();
+    	                    adicionar_path(this);
+    	                });
+    	                
+    	                $('.filepaths .del').click(function(){
+    	                    remover_path(this);
     	                });
     	            });
     	        </script>
                 
-                <div class="block" id="fileset">
+                <div class="block" id="fileset" style="display: none">
             		<div class="block_head">
             			<div class="bheadl"></div>
             			<div class="bheadr"></div>
@@ -301,9 +329,9 @@
         	</div> <!-- .novo_perfil -->
         	
         	<p>
+        	    <input type="submit" class="submit mid" value="Cadastrar" />
     	    </p>
     	</form>
-        <p></p>
         
     </div>
     
