Corrigindo o select multiple.

--- a/nimbus/media/lib/css/style.css
+++ b/nimbus/media/lib/css/style.css
@@ -668,9 +668,22 @@ a:hover {
 .block form select.styled {
 	width: 245px;
 	height: 18px;
-	margin-right: 20px;
+	/*margin-right: 20px;*/
 	cursor: pointer;
 	}
+
+.block form select.styled[multiple=multiple] {
+    font-size: 14px;
+    -moz-border-radius: 3px 3px 3px 3px;
+    border: 1px solid #BBBBBB;
+    height: auto;
+    width: auto;
+    min-width: 245px;
+}
+
+.block form select.styled[multiple=multiple] option {
+    padding: 10px;
+}
 	
 .block form .cmf-skinned-select {
 	padding: 7px;
