--- a/nimbus/media/lib/css/style.css
+++ b/nimbus/media/lib/css/style.css
@@ -615,7 +615,8 @@ a:hover {
 	vertical-align: middle;
 	}
 
-.block form input.text {
+.block form input.text,
+.block form input[type=password] {
 	width: 410px;
 	background: #fefefe;
 	border: 1px solid #bbb;
@@ -859,10 +860,15 @@ a:hover {
 
 /* Login block */
 
+.logo_center {
+    text-align: center;
+    margin-top: 50px;
+}
+
 .block.small.center.login {
 	width: 470px;
 	background: #fff url(../images/bnd.gif) bottom center repeat-x;
-	margin-top: 100px;
+	margin-top: 20px;
 	margin-bottom: 100px;
 	padding-bottom: 5px;
 	}
