--- a/nimbus/wizard/templates/generic.html
+++ b/nimbus/wizard/templates/generic.html
@@ -1,5 +1,6 @@
-{% extends "base.html" %}
+{% extends "base_wizard.html" %}
 
+{% if page_name == 'timezone' %}
 {% block headtags %}
 <script type="text/javascript">
 
@@ -31,37 +32,21 @@
 
 </script>
 {% endblock %}
+{% endif %}
 
+{% block content %}
 
-{% block page %}
+    <form action="" method="post">
+        
+        {% include "form.html" %}
 
-<div class="block">
+        <p>
+            <input type="submit" class="submit" value="Próximo" /> &nbsp;
+        </p>
+               
+        <input type="hidden" name="next" value="{{ next }}" />
 
-	<div class="block_head">
-		<div class="bheadl"></div>
-		<div class="bheadr"></div>
-		<h2>Configuração de Hora</h2>
-	</div>		<!-- .block_head ends -->
+    </form>
 
-    <div class="block_content">
-    
-        {% if messages %}
-            {% for msg in messages %}
-                <!-- TODO: Criar tipos de mensagens: errormsg, success, info, warning -->
-                <div class="message success"><p>{{ msg }}</p></div>
-            {% endfor %}
-        {% endif %}
-    
-        <form method="post" action="">
-            {% include "form.html" %}
-            <p><input type="submit" class="submit" value="Confirm" /></p>
-        </form>
-    
-    </div>
-    
-    <div class="bendl"></div>
-	<div class="bendr"></div>
-
-</div>
 
 {% endblock %}
