--- a/nimbus/restore/templates/restore_list.html
+++ b/nimbus/restore/templates/restore_list.html
@@ -23,115 +23,176 @@
 	</div>		<!-- .block_head ends -->
 
     <div class="block_content">
-        <form action="#" method="post">
+        <form action="#" method="post" onsubmit="return false;">
             {% if computer %}
-            <p><a href="/computers/list">Listar todos os computadores</a></p>
-            <div class="computers">
-                <div class="computer" style="padding: 20px; -moz-border-radius: 5px; background: #EEE; margin-bottom: 20px">
-                    <div class="left" style="float: left; width: 250px">
-                        <div class="title">
-                            <img src="/media/icons/computer.png" style="float: left; height: 32px; padding-right: 10px" />
-                            <h3 class="name" style="margin: 0 0 -5px 0; padding: 0">{{computer.name}}</h3>
-                            <small class="ip">{{computer.address}} - {{computer.operation_system|title}} - {% for g in computer.groups.all %}{{g.name}}{% endfor %}</small>
+                <p><a href="/computers/list">Listar todos os computadores</a></p>
+                <div class="computers">
+                    <div class="computer" style="padding: 20px; -moz-border-radius: 5px; background: #EEE; margin-bottom: 20px">
+                        <div class="left" style="float: left; width: 250px">
+                            <div class="title">
+                                <img src="/media/icons/computer.png" style="float: left; height: 32px; padding-right: 10px" />
+                                <h3 class="name" style="margin: 0 0 -5px 0; padding: 0">{{computer.name}}</h3>
+                                <small class="ip">{{computer.address}} - {{computer.operation_system|title}} - {% for g in computer.groups.all %}{{g.name}}{% endfor %}</small>
+                            </div>
                         </div>
+                        <div class="right" style="float: right; width: 600px">
+                            <p style="font-size: 10px; margin: 0; line-height: 1.4em">{{computer.description}}</p>
+                        </div>
+                        <div class="clear"></div>
                     </div>
-                    <div class="right" style="float: right; width: 600px">
-                        <p style="font-size: 10px; margin: 0; line-height: 1.4em">{{computer.description}}</p>
-                    </div>
-                    <div class="clear"></div>
+                    <input type="hidden" name="computer_id" id="computer_id" value="{{computer.id}}" />
                 </div>
-                <input type="hidden" name="computer_id" value="{{computer.id}}" />
-            </div>
-            <script type="text/javascript" charset="utf-8">
-                $(document).ready(function(){
-                    $('#procedure_id').change(function()
-                    {
-                        if ($(this).val()) {
-                            $('.restore_steps').slideDown();
-                        } else {
-                            $('.restore_steps').slideUp();
-                        }
-                    });
-                    $('#procedure_id').change();
-                });
-            </script>
-            <p>
-                <label for="procedure_id">Selecione o procedimento:</label><br/>
-                <select name="procedure_id" id="procedure_id" class="styled">
-                    <option value=""> - Selecione - </option>
-                    {% for procedure in computer.procedure_set.all %}
-                    <option value="{{procedure.id}}">{{procedure.name}}</option>
-                    {% endfor %}
-                </select>
-            </p>
-            {% else %}
-            <p>
-                <label for="computer_id">Computador que será restaurado:</label><br/>
-                <select class="styled" id="computer_id" name="computer_id">
-                    <option value=""> - Selecione - </option>
-                    {% for computer in computers %}
-                    <option value="{{computer.id}}">{{computer.name}}</option>
-                    {% endfor %}
-                </select>
-            </p>
-            <div class="computer_error" style="display: none"></div>
-            <script type="text/javascript" charset="utf-8">
-                $(document).ready(function(){
-                    $('#computer_id').change(function()
-                    {
-                        var computer_id = $(this).val();
-                        $.getJSON('/restore/get_procedures/' + computer_id + '/', {}, function(data)
+                <script type="text/javascript" charset="utf-8">
+                    $(document).ready(function(){
+                        $('#procedure_id').change(function()
                         {
-                            if (data['error']) {
-                                $('.computer_error').html($('<p>').text(data['error'])).addClass("message error").show('slow');
+                            if ($(this).val()) {
+                                $('.restore_step_1').slideDown();
+                            } else {
+                                $('.restore_step_1').slideUp();
                             }
-                            
-                            $('#procedure_id').empty();
-                            $('<option>').attr('value', '').text(' - Selecione - ').appendTo('#procedure_id');
-                            for (proc in data) {
-                                proc = data[proc];
-                                $('<option>').attr('value', proc['pk']).text(proc['fields']['name']).appendTo("#procedure_id");
-                            }
-                            $('.procedure_select').slideDown();
                         });
+                        $('#procedure_id').change();
                     });
-                    $('#computer_id').change();
+                </script>
+                <p>
+                    <label for="procedure_id">Selecione o procedimento:</label><br/>
+                    <select name="procedure_id" id="procedure_id" class="styled">
+                        <option value=""> - Selecione - </option>
+                        {% for procedure in computer.procedure_set.all %}
+                        <option value="{{procedure.id}}">{{procedure.name}}</option>
+                        {% endfor %}
+                    </select>
+                </p>
+            {% else %}
+                <p>
+                    <label for="computer_id">Computador que será restaurado:</label><br/>
+                    <select class="styled" id="computer_id" name="computer_id">
+                        <option value=""> - Selecione - </option>
+                        {% for computer in computers %}
+                        <option value="{{computer.id}}">{{computer.name}}</option>
+                        {% endfor %}
+                    </select>
+                </p>
+                <div class="computer_error" style="display: none"></div>
+                <script type="text/javascript" charset="utf-8">
+                    $(document).ready(function(){
+                        $('#computer_id').change(function()
+                        {
+                            var computer_id = $(this).val();
+                            $.getJSON('/restore/get_procedures/' + computer_id + '/', {}, function(data)
+                            {
+                                if (data['error']) {
+                                    $('.computer_error').html($('<p>').text(data['error'])).addClass("message error").show('slow');
+                                }
+                            
+                                $('#procedure_id').empty();
+                                $('<option>').attr('value', '').text(' - Selecione - ').appendTo('#procedure_id');
+                                for (proc in data) {
+                                    proc = data[proc];
+                                    $('<option>').attr('value', proc['pk']).text(proc['fields']['name']).appendTo("#procedure_id");
+                                }
+                                $('.procedure_select').slideDown();
+                            });
+                        });
+                        $('#computer_id').change();
                 
-                    $('#procedure_id').change(function()
-                    {
-                        if ($(this).val()) {
-                            $('.restore_steps').slideDown();
-                        } else {
-                            $('.restore_steps').slideUp();
-                        }
+                        $('#procedure_id').change(function()
+                        {
+                            if ($(this).val()) {
+                                $('.restore_step_1').slideDown();
+                            } else {
+                                $('.restore_step_1').slideUp();
+                            }
+                        });
+                        $('#procedure_id').change();
                     });
-                    $('#procedure_id').change();
-                });
-            </script>
-            <p class="procedure_select" style="display: none">
-                <label for="procedure_id">Selecione o procedimento:</label><br/>
-                <select name="procedure_id" id="procedure_id" class="styled">
-                    <option value=""> - Selecione - </option>
-                    {% for procedure in computer.procedure_set.all %}
-                    <option value="{{procedure.id}}">{{procedure.name}}</option>
-                    {% endfor %}
-                </select>
-            </p>
+                </script>
+                <p class="procedure_select" style="display: none">
+                    <label for="procedure_id">Selecione o procedimento:</label><br/>
+                    <select name="procedure_id" id="procedure_id" class="styled">
+                        <option value=""> - Selecione - </option>
+                        {% for procedure in computer.procedure_set.all %}
+                        <option value="{{procedure.id}}">{{procedure.name}}</option>
+                        {% endfor %}
+                    </select>
+                </p>
             {% endif %}
     
-            <div class="restore_steps" style="display: none; padding: 20px; background: #FFF2A7">
-                <h2 style="border-bottom: 1px solid #CCC; padding-bottom: 10px; margin-top: 30px">1. Data para restauração</h2>
-
+            <div class="restore_step_1">
+                <h2 style="border-bottom: 1px solid #666; padding-bottom: 10px; margin-top: 30px">1. Data para restauração</h2>
+                <script type="text/javascript" charset="utf-8">
+                    $(document).ready(function(){
+                        $('.submit_step_1').click(function(){
+                            data_inicio = $('#data_inicio').val();
+                            data_fim = $('#data_fim').val();
+                            computer_id = $('#computer_id').val();
+                            procedure_id = $('#procedure_id').val();
+                        
+                            $('.restore_step_2').slideUp();
+                            $('.restore_step_3').slideUp();
+                            $('.restore_step_4').slideUp();
+                            $('.restore_step_5').slideUp();
+                        
+                            if (data_inicio && data_fim) {
+                                $.getJSON(
+                                    '/restore/get_jobs/' + computer_id + '/' + procedure_id + '/' + data_inicio + '/' + data_fim,
+                                    function(data)
+                                    {
+                                        $("#jobs_list").empty();
+                                        if (data) {
+                                            // TODO: Populate the jobs list.
+                                            $("<option>").val("").text(" - Selecione um Job  - ").attr("selected", "selected").appendTo("#jobs_list");
+                                            for (var i in data) {
+                                                $("<option>").val(data[i].id).text(data[i].name).appendTo("#jobs_list");
+                                            }
+                                            $("#jobs_list").change();
+                                            $('.restore_step_2').slideDown();
+                                        }
+                                    }
+                                );
+                            }
+                        
+                            return false;
+                        });
+                        
+                        $('.submit_step_1').click();
+                    });
+                </script>
                 <p>
     				<label>Data inicial:</label> 
-    				<input type="text" class="text date_picker" />
+    				<input type="text" class="text date_picker" id="data_inicio" name="data_inicio" />
     				&nbsp;&nbsp;
     				<label>Data final:</label> 
-    				<input type="text" class="text date_picker" />
+    				<input type="text" class="text date_picker" id="data_fim" name="data_fim" />
+    				<input type="submit" class="submit submit_step_1" value="Filtrar" />
     			</p>
+    		</div>
 
-    
-                <h2 style="border-bottom: 1px solid #CCC; padding-bottom: 10px; margin-top: 30px">2. Arquivos para restauração</h2>
+            <div class="restore_step_2" style="display: none">
+                <h2 style="border-bottom: 1px solid #666; padding-bottom: 10px; margin-top: 30px">2. Selecione um Job para restauração</h2>
+
+                <script type="text/javascript" charset="utf-8">
+                    $(document).ready(function(){
+                        $('#jobs_list').change(
+                            function(){
+                                if ($(this).val()) {
+                                    $('.restore_step_3').slideDown();
+                                } else {
+                                    $('.restore_step_3').slideUp();
+                                }
+                            }
+                        ).click();
+                    });
+                </script>
+                <select name="job_id" class="styled" id="jobs_list">
+                    <option value=""> - Selecione um Job - </option>
+                </select>
+                <div class="clear"></div>
+            </div>
+
+            <div class="restore_step_3" style="display: none">
+                <h2 style="border-bottom: 1px solid #666; padding-bottom: 10px; margin-top: 30px">2. Arquivos para restauração</h2>
 
                 <p>
     				<label>Buscar arquivo:</label> <input type="text" class="text small" /> <input type="submit" class="submit small" value="Buscar" />
@@ -140,8 +201,10 @@
                 <div class="filetree" id="filetree" style="float: left; width: 30%" ref="/restore/get_tree/root"></div>
                 <div class="filetree" id="filetree" style="width: 60%; float: right" ref="/restore/get_tree/1"></div>
                 <div class="clear"></div>
-        
-                <h2 style="border-bottom: 1px solid #CCC; padding-bottom: 10px; margin-top: 30px">3. Restauração</h2>
+            </div>
+            
+            <div class="restore_step_4" style="display: none">
+                <h2 style="border-bottom: 1px solid #666; padding-bottom: 10px; margin-top: 30px">3. Restauração</h2>
                 <p>
                     <label>Selecione o local de destino:</label><br/>
                     <input type="radio" name="radio" checked="checked" class="radio" /> <label>Download</label>
@@ -153,7 +216,9 @@
                 </p>
             </div>
         </form>
+        
         <div class="clear"></div>
+        <p></p>
     </div>
     
     <div class="bendl"></div>
